<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service €</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="bad_service">Bad (NO TIP)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="currency">Currency exchange</string>

    <string-array name="currency_list">
        <item>Euro</item>
        <item>Dollars</item>
        <item>Pounds</item>
    </string-array>


    <string name="cost">Cost of Service: %s</string>
    <string name="cost_euro">Cost of Service in Euro: %s</string>
    <string name="percentage">Percentage of tip: %s </string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="round_up">Added for the round up %s</string>
    <string name="total">Total Amount: %s</string>
    <string name="back">Go Back</string>

    <string name="toast">Add a cost to continue</string>
</resources>